--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <header>
+    <header class="fade-in">
       <h1>CrowBosses</h1>
     </header>
     <main>
