--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="fade-in">
-      <h1>CrowBosses</h1>
+      <h2>CrowBosses</h2>
     </header>
     <main>
       <h2><center>DESIGN GALLERY</h2>
@@ -37,6 +37,10 @@
         <figure>
           <img src="h1.png" alt="White shirt">
           <figcaption>"Floreo Hoodie"</figcaption>
+        </figure>
+        <figure>
+          <img src="F.png" alt="White shirt">
+          <figcaption><a href="page3.html">"Retail Tee"</a></figcaption>
         </figure>
 <!-- ADD More Images Here-->
       </div>
