--- a/page1.html
+++ b/page1.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>CrowBosses</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header>
-      <h1>CrowBosses</h1>
+      <h2>CrowBosses</h2>
     </header>
     <div class="container">
       <h1>CrowBosses</h1>
