--- a/page3.html
+++ b/page3.html
@@ -7,21 +7,20 @@
   </head>
   <body>
     <header>
-        <h2>CrowBosses</h2>
-      </header>
+      <h2>CrowBosses</h2>
+    </header>
     <div class="container">
       <h1>CrowBosses</h1>
       <div class="image-container">
         <figure>
-            <img src="hf.png" alt="Image 2">
-        <img src="hb.png" alt="Image 1">
-        
-        <figcaption>"Retail Hoodie"</figcaption>
-    </figure>
+          <img src="F.png" alt="Image 1">
+          <img src="B.png" alt="Image 2">
+          <figcaption>"Retail Tee"</figcaption>
+        </figure>
       </div>
     </div>
     <footer>
-        <p>&copy; 2023 CrowBosses Clothing Designs.</p>
-      </footer>
+      <p>&copy; 2023 CrowBosses Clothing Designs.</p>
+    </footer>
   </body>
 </html>
