--- a/index.html
+++ b/index.html
@@ -5,26 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <style type="text/css">
-      /* CSS for gallery images */
-      .gallery div img {
-        max-width: 100%;
-        height: auto;
-      }
-      /* Media query for smaller screens */
-      @media only screen and (max-width: 600px) {
-        .gallery div {
-          width: 100%;
-        }
-      }
-      /* CSS for price tags */
-      .caption {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      .price-tag {
-        font-weight: bold;
-        margin-top: 5px;
+      /* Centering of the main heading */
+      h1 {
+        text-align: center;
       }
     </style>
   </head>
@@ -33,45 +16,9 @@
       <h2>CrowBosses</h2>
     </header>
     <main>
-      <h2><center>DESIGN GALLERY</h2>
-      <div class="gallery">
-        <figure>
-          <img src="f1.png" alt="Black dress">
-          <figcaption>
-            <div class="caption">
-              <a href="page1.html">"Hysterical Tee"</a>
-              <span class="price-tag">$400</span>
-            </div>
-          </figcaption>
-        </figure>
-        <figure>
-          <img src="hb.png" alt="Red dress">
-          <figcaption>
-            <div class="caption">
-              <a href="page2.html">"Retail Hoodie"</a>
-              <span class="price-tag">$750</span>
-            </div>
-          </figcaption>
-        </figure>
-        <figure>
-          <img src="h1.png" alt="White shirt">
-          <figcaption>
-            <div class="caption">
-              "Floreo Hoodie"
-              <span class="price-tag">$620</span>
-            </div>
-          </figcaption>
-        </figure>
-        <figure>
-          <img src="F.png" alt="White shirt">
-          <figcaption>
-            <div class="caption">
-              <a href="page3.html">"Retail Tee"</a>
-              <span class="price-tag">$450</span>
-            </div>
-          </figcaption>
-        </figure>
-        <!-- ADD More Images Here-->
+      <h1>Enter The Gallery</h1>
+      <div class="gallery-link">
+        <a href="gallery.html">Enter The Gallery</a>
       </div>
     </main>
     <footer>
