--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>CrowBosses</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    
+
     <style type="text/css">
       /* Centering of the main heading */
       h1 {
