--- a/gallery.html
+++ b/gallery.html
@@ -57,6 +57,7 @@
           <img src="h1.png" alt="White shirt">
           <figcaption>
             <div class="caption">
+              <a href="page4.html">"Retail Hoodie"</a>
               "Floreo Hoodie"
               <span class="price-tag">$620</span>
             </div>
