--- a/page4.html
+++ b/page4.html
@@ -13,7 +13,7 @@
       <h1>CrowBosses</h1>
       <div class="image-container">
         <figure>
-          <img src="hb.png" alt="Image 1">
+          <img src="h1.png" alt="Image 1">
           <figcaption>"Floreo Hoodie"</figcaption>
         </figure>
       </div>
