--- a/gallery.html
+++ b/gallery.html
@@ -57,8 +57,8 @@
           <img src="h1.png" alt="White shirt">
           <figcaption>
             <div class="caption">
-              <a href="page4.html">"Retail Hoodie"</a>
-              "Floreo Hoodie"
+              <a href="page4.html">"Floreo Hoodie"</a>
+              
               <span class="price-tag">$620</span>
             </div>
           </figcaption>
