--- a/gallery.html
+++ b/gallery.html
@@ -71,6 +71,15 @@
             </div>
           </figcaption>
         </figure>
+        <figure>
+          <img src="hf1.png" alt="White shirt">
+          <figcaption>
+            <div class="caption">
+              <a href="page5.html">"Cancelled Hoddie"</a>
+              <span class="price-tag">$550</span>
+            </div>
+          </figcaption>
+        </figure>
         <!-- ADD More Images Here-->
       </div>
     </main>
