--- a/gallery.html
+++ b/gallery.html
@@ -80,6 +80,15 @@
             </div>
           </figcaption>
         </figure>
+        <figure>
+          <img src="b2.svg" alt="White shirt">
+          <figcaption>
+            <div class="caption">
+              <a href="page6.html">"Deconstruct Hoddie"</a>
+              <span class="price-tag">$720</span>
+            </div>
+          </figcaption>
+        </figure>
         <!-- ADD More Images Here-->
       </div>
     </main>
