--- a/gallery.html
+++ b/gallery.html
@@ -84,7 +84,7 @@
           <img src="b2.svg" alt="White shirt">
           <figcaption>
             <div class="caption">
-              <a href="page6.html">"Deconstruct Hoddie"</a>
+              <a href="page6.html">"Deconstruct Hoodie"</a>
               <span class="price-tag">$720</span>
             </div>
           </figcaption>
