--- a/gallery.html
+++ b/gallery.html
@@ -89,6 +89,15 @@
             </div>
           </figcaption>
         </figure>
+        <figure>
+          <img src="csf.svg" alt="White shirt">
+          <figcaption>
+            <div class="caption">
+              <a href="page7.html">"L'amour Toujours Hoodie"</a>
+              <span class="price-tag">$550</span>
+            </div>
+          </figcaption>
+        </figure>
         <!-- ADD More Images Here-->
       </div>
     </main>
