--- a/page7.html
+++ b/page7.html
@@ -13,10 +13,10 @@
       <h1>CrowBosses</h1>
       <div class="image-container">
         <figure>
-            <img src="b2.svg" alt="Image 2">
-          <img src="b1.svg" alt="Image 1">
+            <img src="csf.svg" alt="Image 2">
+          <img src="csb.svg" alt="Image 1">
           
-          <figcaption>"Deconstruct Hoodie"</figcaption>
+          <figcaption>"L'amour Toujours Hoodie"</figcaption>
         </figure>
       </div>
     </div>
