--- a/index.html
+++ b/index.html
@@ -1,31 +1,74 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CrowBosses</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    
-
-    <style type="text/css">
-      /* Centering of the main heading */
-      h1 {
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <header class="fade-in">
-      <h2>CrowBosses</h2>
-    </header>
-    <main>
-      <h1>Enter The Gallery</h1>
-      <div class="gallery-link">
-        <a href="gallery.html">Enter The Gallery</a>
-      </div>
-    </main>
-    <footer>
-      <p>&copy; 2023 CrowBosses Clothing Designs.</p>
-    </footer>
-  </body>
+<head>
+	<title>COLLECTIVE DIFFERENCE</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<header>
+		<img src="cd.png" alt="Your Logo">
+	</header>
+	<nav>
+		<a href="#">Home</a>
+		<a href="#">Shop</a>
+		<a href="#">About</a>
+		<a href="#">Contact</a>
+	</nav>
+	<main>
+		<h2>Welcome to our COLLECTIVE DIFFERENCE</h2>
+		<p>Discover our latest collection of luxury clothing and accessories, designed for those who appreciate quality, craftsmanship, and attention to detail.</p>
+		<div class="product-grid">
+			<div class="product-item">
+				<div class="product-image">
+					<img src="hf.png" alt="Product 1 - Front">
+					<img src="hb.png" alt="Product 1 - Back">
+				</div>
+				<h3>CD Hoodie</h3>
+				<p>£110</p>
+				<button class="cta-button">Add to Cart</button>
+			</div>
+			<div class="product-item">
+				<div class="product-image">
+					<img src="LF.png" alt="Product 2 - Front">
+					<img src="LB.png" alt="Product 2 - Back">
+				</div>
+				<h3>Love Yourself First Tee</h3>
+				<p>£55</p>
+				<button class="cta-button">Add to Cart</button>
+			</div>
+			<div class="product-item">
+					<div class="product-image">
+					<img src="pf.png" alt="Product 3 - Front">
+					<img src="pb.png" alt="Product 3 - Back">
+				</div>
+				<h3>Perspective Hoodie</h3>
+				<p>£110</p>
+				<button class="cta-button">Add to Cart</button>
+			</div>
+            <div class="product-item">
+					<div class="product-image">
+					<img src="cdf.png" alt="Product 3 - Front">
+					<img src="cdb.png" alt="Product 3 - Back">
+				</div>
+				<h3>CD Hoodie</h3>
+				<p>£110</p>
+				<button class="cta-button">Add to Cart</button>
+			</div>
+            <div class="product-item">
+                <div class="product-image">
+                <img src="tf.png" alt="Product 3 - Front">
+                <img src="tb.png" alt="Product 3 - Back">
+            </div>
+            <h3>Difference Tee</h3>
+            <p>£60</p>
+            <button class="cta-button">Add to Cart</button>
+        </div>
+		</div>
+	</main>
+	<footer>
+        <center>
+			<p>&copy; 2023 COLLECTIVE DIFFERENCE. All rights reserved.</p>
+        </center>
+        </footer>
+</body>
 </html>
